--- a/SoftClicker/nbproject/project.properties
+++ b/SoftClicker/nbproject/project.properties
@@ -75,7 +75,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=view.MainWindow
+main.class=controller.Initializer
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
