--- a/SoftClicker/nbproject/private/private.properties
+++ b/SoftClicker/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\THARU\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Rajind\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
